# searchy

./: .env.example  .gitpod.yml  Dockerfile  Procfile  README.md  main.py  package.json  pyproject.toml  requirements.txt  start.sh  tailwind.config.js
modules/: classifier.py  db.py  news.py  newsletter.py  sms.py  texts.py  translate.py  weather.py  wiki.py
prisma/: schema.prisma
static/: output.css
templates/: base.html  landing.html
